--- a/lesson13/Makefile
+++ b/lesson13/Makefile
@@ -1,5 +1,5 @@
-myprocess:myprocess.c
-	gcc -o $@ $^ -g
+myprocess:myprocess.cc
+	g++ -o $@ $^ -g -std=c++11
 .PHONY:clean
 clean:
 	rm -f myprocess
