设计了一个基于UDP的聊天室demo

--- a/lesson41/makefile
+++ b/lesson41/makefile
@@ -4,7 +4,7 @@ cc=g++
 all:udpClient udpServer
 
 udpClient:udpClient.cc
-	$(cc) -o $@ $^ -std=c++11
+	$(cc) -o $@ $^ -lpthread -std=c++11
 udpServer:udpServer.cc
 	$(cc) -o $@ $^ -std=c++11
 
