写了TCP的多进程

--- a/lesson43/2.tcpServer/makefile
+++ b/lesson43/2.tcpServer/makefile
@@ -3,10 +3,10 @@ cc=g++
 all:tcpServer tcpClient
 
 tcpServer:tcpServer.cc
-	$(cc) -o $@ $^ -std=c++11
+	$(cc) -o $@ $^ -lpthread -std=c++11
 
 tcpClient:tcpClient.cc
-	$(cc) -o $@ $^ -std=c++11
+	$(cc) -o $@ $^ -lpthread -std=c++11
 
 .PHONY:clean
 clean:
